<resources>
    <string name="app_name">Quiz App</string>

    <string name="que1">Name the SUV that is shown in the image.(Just the car name, not the Company.)</string>
    <string name="que2">What is the top speed of Mclaren 720s ?</string>
    <string name="que3">Which of the following is true about Bugatti Chiron Pur Sport?</string>
    <string name="checkbox1">Engine: 8-liter W16</string>
    <string name="checkbox2">Top Speed: 300+ mph</string>
    <string name="checkbox3">Limited to 60 vehicles</string>
    <string name="que4">W Motors, the first manufacturer of high-performance luxury sports cars in the Middle East, was founded in the year ?</string>
    <string name="question_1">Question 1</string>
    <string name="enter_your_answer_here">Enter your Answer Here</string>
    <string name="question_2">Question 2</string>
    <string name="_205_mph">205 mph</string>
    <string name="_212_mph">212 mph</string>
    <string name="_230_mph">230 mph</string>
    <string name="question_3">Question 3</string>
    <string name="question_4">Question 4</string>
    <string name="_2010">2010</string>
    <string name="_2012">2012</string>
    <string name="_2015">2015</string>
    <string name="submit">Submit</string>

</resources>