<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical">

        <TextView
            style="@style/question_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_1" />

        <TextView
            style="@style/question_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/que1" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:src="@drawable/urus" />

        <EditText
            android:id="@+id/et_Ans_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/enter_your_answer_here"
            android:inputType="text"
            android:maxLines="1" />


        <TextView
            style="@style/question_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/question_2" />

        <TextView
            style="@style/question_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/que2" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:src="@drawable/mclaren" />

        <RadioGroup
            android:id="@+id/radiogroup_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <RadioButton
                android:id="@+id/radio_205mph"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:text="@string/_205_mph"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/radio_212mph"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:text="@string/_212_mph"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/radio_230mph"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:text="@string/_230_mph"
                android:textSize="16sp" />

        </RadioGroup>


        <TextView
            style="@style/question_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/question_3" />

        <TextView
            style="@style/question_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/que3" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginBottom="10dp"
            android:scaleType="centerCrop"
            android:src="@drawable/chiron_pur_sport" />

        <CheckBox
            android:id="@+id/checkbox_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:text="@string/checkbox1"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/checkbox_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:text="@string/checkbox2"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/checkbox_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:text="@string/checkbox3"
            android:textSize="16sp" />

        <TextView
            style="@style/question_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/question_4" />

        <TextView
            style="@style/question_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/que4" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="200dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="centerCrop"
                android:src="@drawable/fenyr_supersport" />

            <ImageView
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_margin="12dp"
                android:scaleType="centerCrop"
                android:src="@drawable/w_motors_logo" />

        </RelativeLayout>

        <RadioGroup
            android:id="@+id/radiogroup_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            >

            <RadioButton
                android:id="@+id/radio_2010"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:text="@string/_2010"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/radio_2012"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:text="@string/_2012"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/radio_2015"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:text="@string/_2015"
                android:textSize="16sp" />

        </RadioGroup>

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="50dp"
            android:background="@color/colorAccent"
            android:onClick="onSubmit"
            android:padding="16dp"
            android:text="@string/submit"
            android:textSize="18sp" />

    </LinearLayout>
</ScrollView>